# GadgetConverter

./: CMakeLists.txt  Doxyfile  README.md
resources/: names.txt  type1_list.txt  types.txt
src/: Array.hpp  Block.cpp  Block.hpp  CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.hpp  Error.hpp  Header.cpp  Header.hpp  NameMap.cpp  NameMap.hpp  Paths.hpp.in  Reader.cpp  Reader.hpp  Type1List.cpp  Type1List.hpp  TypeMap.cpp  TypeMap.hpp  Utils.hpp  Writer.cpp  Writer.hpp  main.cpp
